--- a/Esbic/app/build.gradle
+++ b/Esbic/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile project(':esbic-presenter')
-
+    compile 'com.zhy:autolayout:1.3.6'
 }
