--- a/Esbic/app/src/main/AndroidManifest.xml
+++ b/Esbic/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
         >
-
+        <meta-data android:name="design_width" android:value="1280">
+        </meta-data>
+        <meta-data android:name="design_height" android:value="800">
+        </meta-data>
 
         <activity android:name=".ativity.WelcomeActivity"
             android:screenOrientation="landscape">
@@ -106,6 +109,10 @@
         </activity>
         <activity android:name=".ativity.SettingProjectSetActivity"
             android:screenOrientation="landscape">
+        </activity>
+        <activity android:name=".ativity.OnCallActivity"
+            android:screenOrientation="landscape"
+            >
         </activity>
     </application>
 </manifest>
