--- a/Esbic/app/build.gradle
+++ b/Esbic/app/build.gradle
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':esbic-presenter')
-
+    compile project(':esbic-model')
 }
