--- a/Esbic/app/build.gradle
+++ b/Esbic/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile project(':esbic-presenter')
+    compile project(':esbic-model')
     compile 'com.zhy:autolayout:1.3.6'
 }
