--- a/Esbic/app/src/main/AndroidManifest.xml
+++ b/Esbic/app/src/main/AndroidManifest.xml
@@ -19,13 +19,15 @@
     <uses-permission android:name="android.permission.INTERNET" ></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK" ></uses-permission>
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD"></uses-permission>
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" ></uses-permission>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name="com.eastsoft.android.esbic.ativity.MyApplication"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:windowSoftInputMode="stateHidden"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
         >
         <meta-data android:name="design_width" android:value="1280">
@@ -41,79 +43,129 @@
             </intent-filter>
         </activity>
         <activity android:name=".ativity.SmartHomeActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.LeaveHome"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallMain"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallManagementCenterActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallRecordActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.ConversationActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.MessageContentActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.MonitorActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.PushMessageActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.ScreenLightActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.VolumeActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.WifiSettingActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.AlarmRecordActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingSecurityNeedPwdActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingSecurityActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SecurityAlterUserPwdActivity"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
+            android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingDateActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingRecoveryFactoryActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectQueryActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingDeviceInfoActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectPassWordActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectSetActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.OnCallActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
             >
         </activity>
         <activity android:name=".ativity.StandByActivity"
+                  android:windowSoftInputMode="adjustUnspecified|stateHidden"
+                  android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
     </application>
