智能楼宇对讲UI监控功能优化

--- a/Esbic/app/src/main/AndroidManifest.xml
+++ b/Esbic/app/src/main/AndroidManifest.xml
@@ -168,5 +168,10 @@
                   android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape">
         </activity>
+        <activity android:name=".ativity.WeatherSettingActivity"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 </manifest>
