添加室内机呼叫界面

--- a/Esbic/app/src/main/AndroidManifest.xml
+++ b/Esbic/app/src/main/AndroidManifest.xml
@@ -139,6 +139,11 @@
             android:screenOrientation="landscape"
             >
         </activity>
+        <activity android:name=".ativity.RoomCallActivity"
+                  android:windowSoftInputMode="stateHidden"
+                  android:screenOrientation="landscape"
+            >
+        </activity>
         <activity android:name=".ativity.StandByActivity"
                   android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
