--- a/Esbic/app/src/main/AndroidManifest.xml
+++ b/Esbic/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:windowSoftInputMode="stateHidden"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+        android:theme="@style/MyTheme"
         >
         <meta-data android:name="design_width" android:value="1280">
         </meta-data>
@@ -44,113 +44,86 @@
             </intent-filter>
         </activity>
         <activity android:name=".ativity.SmartHomeActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.LeaveHome"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallMain"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallManagementCenterActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.CallRecordActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.ConversationActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.MessageContentActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.MonitorActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.PushMessageActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.ScreenLightActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.VolumeActivity"
-                  android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
         </activity>
         <activity android:name=".ativity.SettingActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.WifiSettingActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.AlarmRecordActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingSecurityNeedPwdActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingSecurityActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SecurityAlterUserPwdActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingDateActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingRecoveryFactoryActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectQueryActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingDeviceInfoActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectPassWordActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.SettingProjectSetActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.OnCallActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape"
             >
         </activity>
         <activity android:name=".ativity.RoomCallActivity"
-                  android:windowSoftInputMode="stateHidden"
                   android:screenOrientation="landscape"
             >
         </activity>
         <activity android:name=".ativity.StandByActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".ativity.WeatherSettingActivity"
-                  android:windowSoftInputMode="stateHidden"
             android:screenOrientation="landscape">
         </activity>
     </application>
